crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__memory__tests__memory_with_guidelines.snap
---
source: crates/zeph-tui/src/widgets/memory.rs
expression: output
---
memory                                            
  sqlite: 10 msgs                                 
  conv id: ---                                    
  embeddings: 0                                   
  graph: 0 entities, 0 edges, 0 communities       
  graph extractions: 0 ok, 0 failed               
  guidelines: v3 (2026-03-15T17:00:00.000Z)
