crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__memory__tests__memory_with_stats.snap
---
source: crates/zeph-tui/src/widgets/memory.rs
expression: output
---
memory                        
  sqlite: 42 msgs             
  qdrant connected            
  conv id: ---                
  embeddings: 10              
  graph: 0 entities, 0 edges, 
  graph extractions: 0 ok, 0 f
