crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__memory__tests__probe_error_verdict_shows_no_score.snap
---
source: crates/zeph-tui/src/widgets/memory.rs
assertion_line: 308
expression: output
---
memory                                            
  sqlite  5 msgs · conv —                         
  probe: P 50% S 0% H 0% E 50%                    
  Last: Error
