crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__memory__tests__probe_lines_hidden_when_no_probes.snap
---
source: crates/zeph-tui/src/widgets/memory.rs
assertion_line: 290
expression: output
---
memory                                            
  sqlite  5 msgs · conv —
