crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__memory__tests__probe_lines_visible_when_probes_ran.snap
---
source: crates/zeph-tui/src/widgets/memory.rs
assertion_line: 229
expression: output
---
memory                                            
  sqlite  5 msgs · conv —                         
  probe: P 87% S 10% H 2% E 1%                    
  Last: Pass (0.91)
