crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__memory__tests__probe_lines_with_category_scores.snap
---
source: crates/zeph-tui/src/widgets/memory.rs
expression: output
---
memory                                                                
  sqlite: 5 msgs                                                      
  conv id: ---                                                        
  embeddings: 0                                                       
  graph: 0 entities, 0 edges, 0 communities                           
  graph extractions: 0 ok, 0 failed                                   
  probe: P 100% S 0% H 0% E 0%                                        
  Last: Pass (0.72) Rec:0.90 Art:0.50 Con:0.80 Dec:0.60
